# routes/export.js
@@ -1,0 +1,4 @@
+const exportcsv = require("../controller/export");
+module.exports = function (app) {
+  app.get("/Exportlogs", exportcsv.Exportlogs);
+};
