# swagger_output.json
@@ -163,6 +163,17 @@
         }
       }
     },
+    "/Exportlogs": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/getattendance/": {
       "get": {
         "description": "",
